tests/machine/x/c/list_nested_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/list_nested_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:39:17: error: subscripted value is neither array nor pointer nor vector
   39 |   matrix.data[1][0] = 5;
      |                 ^

   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:14Z
